--- a/index.html
+++ b/index.html
@@ -1,10 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My GitHub Pages Website</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>AI Expert - Researcher, Teaching Assistant, Data Scientist</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<h1>Welcome to my website</h1>
-	<p>This is my first GitHub Pages website.</p>
+	<header>
+		<h1>AI Expert</h1>
+		<nav>
+			<ul>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">Research</a></li>
+				<li><a href="#">Teaching</a></li>
+				<li><a href="#">Data Science</a></li>
+				<li><a href="#">Contact</a></li>
+			</ul>
+		</nav>
+	</header>
+	<main>
+		<section>
+			<h2>About Me</h2>
+			<p>I am a PhD researcher and teaching assistant with a strong background in machine learning, particularly in the context of healthcare. I have authored several papers on the topic and am passionate about applying AI to improve patient outcomes.</p>
+			<p>In addition to my research and teaching, I also have extensive experience as a data analyst and data scientist. I enjoy working with data to extract insights and develop models that drive business value.</p>
+		</section>
+		<section>
+			<h2>Research</h2>
+			<p>My research focuses on using machine learning to improve healthcare outcomes. Specifically, I am interested in developing models that can predict patient outcomes based on clinical data, as well as models that can identify patients who are at risk of developing certain conditions.</p>
+			<p>I have published several papers on this topic in top-tier machine learning and healthcare journals, and have presented my work at several conferences.</p>
+		</section>
+		<section>
+			<h2>Teaching</h2>
+			<p>As a teaching assistant, I am responsible for leading tutorial sessions and grading assignments for undergraduate courses in computer science and machine learning. I am passionate about sharing my knowledge with others and helping them develop their skills.</p>
+		</section>
+		<section>
+			<h2>Data Science</h2>
+			<p>In addition to my academic work, I also work as a data scientist at a healthcare technology company. In this role, I am responsible for developing models that can help healthcare providers improve patient outcomes and reduce costs.</p>
+			<p>I have experience working with a variety of data sources, including electronic health records, claims data, and patient-generated data, and have developed models using a range of machine learning techniques.</p>
+		</section>
+	</main>
+	<footer>
+		<p>&copy; 2023 AI Expert</p>
+	</footer>
 </body>
 </html>
