--- a/index.html
+++ b/index.html
@@ -1,59 +1,49 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>AI Expert - Researcher, Teaching Assistant, Data Scientist</title>
-	<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Fuzzy Shahidi | Data Scientist with Specialization in Deep Learning – Programmer</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<header>
-		<div class="container">
-			<h1>AI Expert</h1>
-			<nav>
-				<ul>
-					<li><a href="#">Home</a></li>
-					<li><a href="#">Research</a></li>
-					<li><a href="#">Teaching</a></li>
-					<li><a href="#">Data Science</a></li>
-					<li><a href="#">Contact</a></li>
-				</ul>
-			</nav>
-		</div>
-	</header>
-	<main>
-		<section>
-			<div class="container">
-				<h2>About Me</h2>
-				<p>I am a PhD researcher and teaching assistant with a strong background in machine learning, particularly in the context of healthcare. I have authored several papers on the topic and am passionate about applying AI to improve patient outcomes.</p>
-				<p>In addition to my research and teaching, I also have extensive experience as a data analyst and data scientist. I enjoy working with data to extract insights and develop models that drive business value.</p>
-			</div>
-		</section>
-		<section>
-			<div class="container">
-				<h2>Research</h2>
-				<p>My research focuses on using machine learning to improve healthcare outcomes. Specifically, I am interested in developing models that can predict patient outcomes based on clinical data, as well as models that can identify patients who are at risk of developing certain conditions.</p>
-				<p>I have published several papers on this topic in top-tier machine learning and healthcare journals, and have presented my work at several conferences.</p>
-			</div>
-		</section>
-		<section>
-			<div class="container">
-				<h2>Teaching</h2>
-				<p>As a teaching assistant, I am responsible for leading tutorial sessions and grading assignments for undergraduate courses in computer science and machine learning. I am passionate about sharing my knowledge with others and helping them develop their skills.</p>
-			</div>
-		</section>
-		<section>
-			<div class="container">
-				<h2>Data Science</h2>
-				<p>In addition to my academic work, I also work as a data scientist at a healthcare technology company. In this role, I am responsible for developing models that can help healthcare providers improve patient outcomes and reduce costs.</p>
-				<p>I have experience working with a variety of data sources, including electronic health records, claims data, and patient-generated data, and have developed models using a range of machine learning techniques.</p>
-			</div>
-		</section>
-	</main>
-	<footer>
-		<div class="container">
-			<p>&copy; 2023 AI Expert</p>
-		</div>
-	</footer>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Skills</a></li>
+        <li><a href="#">Experience</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section id="intro">
+      <h1>Fuzzy Shahidi</h1>
+      <h2>Data Scientist with Specialization in Deep Learning – Programmer</h2>
+      <p>Phone: +1-(403)-618-0677 | E-mail: fuzzyshahidi@gmail.com | LinkedIn: <a href="https://www.linkedin.com/in/fuzzy-shahidi/">www.linkedin.com/in/fuzzy-shahidi</a> | GitHub: <a href="https://github.com/Fuzzy-sh">https://github.com/Fuzzy-sh</a> | Website: <a href="https://github.com/Fuzzy-sh/Fuzzy-sh.github.io">https://github.com/Fuzzy-sh/Fuzzy-sh.github.io</a></p>
+    </section>
+    <section id="about">
+      <h2>About Me</h2>
+      <p>I am an agile, gritty, and curious researcher and teaching assistant pursuing a Ph.D. in Electrical and Software Engineering, specializing in event-driven approaches and algorithms.</p>
+    </section>
+    <section id="skills">
+      <h2>Skills</h2>
+      <ul>
+        <li>Extensive experience in programming and query languages</li>
+      </ul>
+    </section>
+    <section id="experience">
+      <h2>Experience</h2>
+      <article>
+        <h3>Enrolment Services Data Analyst | U of C, Calgary, AB, Canada | Jul 2022 – Sep 2022</h3>
+        <ul>
+          <li>Analyzed survey responses from 7,000 students and provided high-level data comparison to generate various reports (using Plotly, Matplotlib, and seaborn) to identify trends.</li>
+        </ul>
+      </article>
+    </section>
+  </main>
 </body>
 </html>
