--- a/index.html
+++ b/index.html
@@ -1,49 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Fuzzy Shahidi | Data Scientist with Specialization in Deep Learning – Programmer</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fuzzy Shahidi</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Skills</a></li>
-        <li><a href="#">Experience</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <section id="intro">
-      <h1>Fuzzy Shahidi</h1>
-      <h2>Data Scientist with Specialization in Deep Learning – Programmer</h2>
-      <p>Phone: +1-(403)-618-0677 | E-mail: fuzzyshahidi@gmail.com | LinkedIn: <a href="https://www.linkedin.com/in/fuzzy-shahidi/">www.linkedin.com/in/fuzzy-shahidi</a> | GitHub: <a href="https://github.com/Fuzzy-sh">https://github.com/Fuzzy-sh</a> | Website: <a href="https://github.com/Fuzzy-sh/Fuzzy-sh.github.io">https://github.com/Fuzzy-sh/Fuzzy-sh.github.io</a></p>
-    </section>
-    <section id="about">
-      <h2>About Me</h2>
-      <p>I am an agile, gritty, and curious researcher and teaching assistant pursuing a Ph.D. in Electrical and Software Engineering, specializing in event-driven approaches and algorithms.</p>
-    </section>
-    <section id="skills">
-      <h2>Skills</h2>
-      <ul>
-        <li>Extensive experience in programming and query languages</li>
-      </ul>
-    </section>
-    <section id="experience">
-      <h2>Experience</h2>
-      <article>
-        <h3>Enrolment Services Data Analyst | U of C, Calgary, AB, Canada | Jul 2022 – Sep 2022</h3>
-        <ul>
-          <li>Analyzed survey responses from 7,000 students and provided high-level data comparison to generate various reports (using Plotly, Matplotlib, and seaborn) to identify trends.</li>
-        </ul>
-      </article>
-    </section>
-  </main>
+    <div class="container">
+        <header>
+            <h1>Fuzzy Shahidi</h1>
+            <p>Data Scientist with Specialization in Deep Learning – Programmer</p>
+            <ul>
+                <li>Phone: +1-(403)-618-0677</li>
+                <li>E-mail: fuzzyshahidi@gmail.com</li>
+                <li>LinkedIn: <a href="www.linkedin.com/in/fuzzy-shahidi">www.linkedin.com/in/fuzzy-shahidi</a></li>
+                <li>GitHub: <a href="https://github.com/Fuzzy-sh">https://github.com/Fuzzy-sh</a></li>
+                <li>Website: <a href="https://github.com/Fuzzy-sh/Fuzzy-sh.github.io">https://github.com/Fuzzy-sh/Fuzzy-sh.github.io</a></li>
+            </ul>
+        </header>
+        <section>
+            <h2>Highlights of Skills</h2>
+            <ul>
+                <li>Extensive experience in programming and query languages</li>
+            </ul>
+        </section>
+    </div>
 </body>
 </html>
