--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 			<nav>
 				<ul>
 					<li><a href="#">Home</a></li>
-					<li><a href="#">Research</a></li>
-					<li><a href="#">Teaching</a></li>
-					<li><a href="#">Data Science</a></li>
+					<li><a href="#">Highlights of Skills</a></li>
+					<li><a href="#">Work Experience</a></li>
+					<li><a href="#">Education</a></li>
+					<li><a href="#">Publications/Awards</a></li>
 					<li><a href="#">Contact</a></li>
 				</ul>
 			</nav>
@@ -25,15 +26,34 @@
 		<section>
 			<div class="container">
 				<h2>About Me</h2>
-				<p>I am a PhD researcher and teaching assistant with a strong background in machine learning, particularly in the context of healthcare. I have authored several papers on the topic and am passionate about applying AI to improve patient outcomes.</p>
-				<p>In addition to my research and teaching, I also have extensive experience as a data analyst and data scientist. I enjoy working with data to extract insights and develop models that drive business value.</p>
+				<p>I am an agile, gritty, and curious researcher and teaching assistant pursuing a Ph.D. in Electrical and Software Engineering, specializing in event-driven approaches and algorithms. I am an experienced data scientist with a proven track record of problem-solving and communicating project needs. With a passion for big data analytics, I am committed to using my skills to make measurable differences.</p>
+				<p>As a data analyst, I have mentored over 500 graduate and undergraduate students, developed machine learning models, and conducted statistical analyses. I am a published author and have presented several research papers on machine learning risk estimation, prediction, and breast cancer histopathology image classification.</p>
+				<p>I have expertise in Python, Keras, and other programming languages, and a Master of Science in Business Intelligence and Analytics with a 4.0 GPA from the Universiti Teknologi Malaysia.</p>
+			
 			</div>
 		</section>
 		<section>
 			<div class="container">
-				<h2>Research</h2>
-				<p>My research focuses on using machine learning to improve healthcare outcomes. Specifically, I am interested in developing models that can predict patient outcomes based on clinical data, as well as models that can identify patients who are at risk of developing certain conditions.</p>
-				<p>I have published several papers on this topic in top-tier machine learning and healthcare journals, and have presented my work at several conferences.</p>
+				<h2>Highlights of Skills</h2>
+				<ul>
+					<li>Extensive experience in programming and query languages, including Python, R, C#, HTML5, CSS, JavaScript, SQL, DAX, and Neo4j.</li>
+					<li>In-depth understanding of statistical analyses, including generalized linear models, longitudinal analysis methods, survival analysis methods, hierarchical modeling, and supervised/unsupervised machine learning methods.</li>
+					<li>Mastery of the concepts of deep learning, generative adversarial networks, and computer vision (OpenCV).</li>
+					<li>Over 6 years of practical experience using Python platforms, including Keras and Pytorch.</li>
+					<li>Advanced practical skills in decentralizing IoT networks through blockchain (Hyperledger Fabric).</li>
+					<li>Technical proficiency in parallel computing programming (job arrays) and hyperparameter optimization on the Slurm cluster.</li>
+					<li>Experience with AWS EC2, Apache Spark (Batch/Bash), big data MapReduce, software version control in Git, and Microsoft Azure.</li>
+					<li>Solid understanding of linear algebra, biostatistics, and descriptive and predictive statistical models.</li>
+					<li>Expertise in EDA and generating various reports (interpretable tables, charts, and graphs) of large-volume structured and unstructured data using Pandas, Matplotlib, Seaborn, Plotly, Scikit-learn, Statsmodels, SciPy, NumPy, and Spark.</li>
+					<li>Proficient in web-app frameworks and dashboards for Machine Learning, such as Streamlit and Flask.</li>
+					<li>Strong practical skills in data visualization and analytics platforms, including Excel, Access, Power BI, Tableau, Alteryx, and KNIME.</li>
+					<li>Applied experience in Natural Language Processing algorithms, such as Gensim, NLTK, BERT, PySummary, and word2vec network.</li>
+					<li>Experience using multiple Python editors, including VS Code, Pycharm, Jupyter Notebook, and Google Colab.</li>
+					<li>Solid understanding of data cleaning/pre-processing of longitudinal (complex) datasets and administrative healthcare datasets (Claim, DAD, PIN, NACRS, LTC, Homecare, Registry, Vital Status, etc).</li>
+					<li>Expertise in time-series algorithms, such as Markov models, K-NNs, recurrent neural networks (RNNs), graph neural networks (GNNs), and reinforcement learning models (RLs).</li>
+					<li>Team player and quick learner with strong communication, organizational, written, and presentation skills.</li>
+				</ul>
+			
 			</div>
 		</section>
 		<section>
