--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
 	<header>
 		<div class="container">
-			<h1>AI Expert</h1>
+			<h1>Data Scientist</h1>
+			<h1></h1>
 			<nav>
 				<ul>
 					<li><a href="#">Home</a></li>
