--- a/index.html
+++ b/index.html
@@ -59,13 +59,30 @@
 		</section>
 		<section>
 			<div class="container">
-				<h2>Teaching</h2>
+				<h2>Work Experience</h2>
 				<p>As a teaching assistant, I am responsible for leading tutorial sessions and grading assignments for undergraduate courses in computer science and machine learning. I am passionate about sharing my knowledge with others and helping them develop their skills.</p>
+			
+			
 			</div>
 		</section>
 		<section>
 			<div class="container">
-				<h2>Data Science</h2>
+				<h2>Education</h2>
+				<p>In addition to my academic work, I also work as a data scientist at a healthcare technology company. In this role, I am responsible for developing models that can help healthcare providers improve patient outcomes and reduce costs.</p>
+				<p>I have experience working with a variety of data sources, including electronic health records, claims data, and patient-generated data, and have developed models using a range of machine learning techniques.</p>
+			</div>
+		</section>
+		<section>
+			<div class="container">
+				<h2>Publications/Awards</h2>
+				<p>In addition to my academic work, I also work as a data scientist at a healthcare technology company. In this role, I am responsible for developing models that can help healthcare providers improve patient outcomes and reduce costs.</p>
+				<p>I have experience working with a variety of data sources, including electronic health records, claims data, and patient-generated data, and have developed models using a range of machine learning techniques.</p>
+			</div>
+		</section>
+
+		<section>
+			<div class="container">
+				<h2>Contact</h2>
 				<p>In addition to my academic work, I also work as a data scientist at a healthcare technology company. In this role, I am responsible for developing models that can help healthcare providers improve patient outcomes and reduce costs.</p>
 				<p>I have experience working with a variety of data sources, including electronic health records, claims data, and patient-generated data, and have developed models using a range of machine learning techniques.</p>
 			</div>
