--- a/index.html
+++ b/index.html
@@ -27,10 +27,8 @@
 		<section>
 			<div class="container">
 				<h2>About Me</h2>
-				<p>I am an agile, gritty, and curious researcher and teaching assistant pursuing a Ph.D. in Electrical and Software Engineering, specializing in event-driven approaches and algorithms. I am an experienced data scientist with a proven track record of problem-solving and communicating project needs. With a passion for big data analytics, I am committed to using my skills to make measurable differences.</p>
-				<p>As a data analyst, I have mentored over 500 graduate and undergraduate students, developed machine learning models, and conducted statistical analyses. I am a published author and have presented several research papers on machine learning risk estimation, prediction, and breast cancer histopathology image classification.</p>
-				<p>I have expertise in Python, Keras, and other programming languages, and a Master of Science in Business Intelligence and Analytics with a 4.0 GPA from the Universiti Teknologi Malaysia.</p>
-			
+				<p>Highly motivated PhD candidate in Electrical and Computer Engineering with a 4.0 GPA, experienced in machine learning, deep learning, and computer vision. Skilled in data analysis, research methodology, and project management.</p>
+				
 			</div>
 		</section>
 		<section>
