--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 			<nav>
 				<ul>
 					<li><a href="#">Home</a></li>
-					<li><a href="#">Highlights of Skills</a></li>
-					<li><a href="#">Work Experience</a></li>
+					<li><a href="#">Skills</a></li>
+					<li><a href="#">Experiences</a></li>
 					<li><a href="#">Education</a></li>
 					<li><a href="#">Publications/Awards</a></li>
 					<li><a href="#">Contact</a></li>
