--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<header>
 		<div class="container">
-			<h1>Data Scientist</h1>
+			<h1>Fuzzy Shahidi</h1>
 			<h1></h1>
 			<nav>
 				<ul>
